--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/aja/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="/css/menu.css">
     <title>
         MoreRuby
     </title>
@@ -13,23 +15,37 @@
 </head>
 
 <body>
-
-<header>
     <%- include ('partials/navigation2')%>
+        <span class="nav-bar" id="btnMenu"><i class="fas fa-bars"></i>Menu</span>
+        <nav class="main-nav">
+            <ul class="menu" id="menu">
+                <li class="menu__item"><a href="" class="menu__link">Introduccion</a></li>
+                <li class="menu__item container-submenu">
+                    <a href="#" class="menu__link submenu-btn">Unidades <i class="fas fa-chevron-down"></i></a>
+                    <ul class="submenu">
+                        <li class="menu__item">
+                            <a href="" class="menu__link">Unidad I</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">Unidad II</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">Unidad III</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">Unidad IV</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu__item"><a href="" class="menu__link">Ejemplos</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Sobre nosotros</a></li>
+            </ul>
+        </nav>
 
-</header>
-
-<div class="container-fluid">
-    <h1 class="text-center">APRENDIENDO RUBY</h1>
-</div>
-
-
-
-
-<footer>
-    <%- include ('partials/footer')%>
-</footer>
-   
+        <footer>
+            <!-- <%- include ('partials/footer')%> -->
+        </footer>
+        <script src="/js/menu.js"></script>
 </body>
 
 </html>
