--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,16 +2,16 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2 ">
-                <h5 class="text-light text-start" > <strong>GRUPO 03</strong></h5>
+                <h5 class="text-light text-start" > <strong>Grupo 03</strong></h5>
             </div>
-            <div class="col-sm-7 align-items-end">
+            <div class="col-sm-6 align-items-end">
              
             </div>
-            <a class="nav-link active col-sm-1  text-end" aria-current="page"
-                href="https://www.facebook.com/groups/tpi115presencial2021"><i class="fab fa-facebook fa-2x text-light"></i>
+            <a class="nav-link active col-sm-2  text-end" aria-current="page"
+                href="https://www.facebook.com/groups/tpi115presencial2021"><i class="fab fa-facebook  text-light"></i> Facebook
             </a>
-            <a class="nav-link col-sm-1 text-end" href="https://twitter.com/Areacod1"><i class="fab fa-twitter fa-2x text-light"></i> </a>
-            <a class="nav-link col-sm-1 text-end " href="mailto:areacod.tpi115@gmail.com"><i class="far fa-envelope fa-2x text-light"></i> </a>
+            <a class="nav-link col-sm-1 text-end" href="https://twitter.com/Areacod1"><i class="fab fa-twitter  text-light"></i> Twitter</a>
+            <a class="nav-link col-sm-1 text-end " href="mailto:areacod.tpi115@gmail.com"><i class="far fa-envelope  text-light"></i> Correo</a>
 
 
 
