--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -22,7 +22,7 @@
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="" class="menu__link">Introduccion</a></li>
                 <li class="menu__item container-submenu">
-                    <a href="#" class="menu__link submenu-btn">Unidades <i class="fas fa-chevron-down"></i></a>
+                    <a href="#" class="menu__link submenu-btn">Temas<i class="fas fa-chevron-down"></i></a>
                     <ul class="submenu">
                         <li class="menu__item">
                             <a href="" class="menu__link">Unidad I</a>
@@ -41,16 +41,38 @@
                 <li class="menu__item"><a href="" class="menu__link">Ejemplos</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Sobre nosotros</a></li>
             </ul>
-        </nav>
-        <div class="container-slider">
-            <div class="slider" id="slider">
-                <div class="slider-section"><img src="/img/ruby1.webp" alt="" class="slider__img"></div>
-                <div class="slider-section"><img src="/img/ruby2.jpg" alt="" class="slider__img"></div>
-                <div class="slider-section"><img src="/img/ruby3.png" alt="" class="slider__img"></div>
-                <div class="slider-section"><img src="/img/ruby4.png" alt="" class="slider__img"></div>
+            <div style="text-align: center;">
+                <h2>Aprendiendo Ruby</h2>
             </div>
-            <div class="slider__btn slider__btn--right" id="btn__right">&#62</div>
-            <div class="slider__btn slider__btn--left" id="tbn__left">&#60</div>
+
+        </nav>
+
+        <div class="slider">
+            <ul>
+                <li>
+                    <img src="https://i.pinimg.com/originals/74/52/db/7452db2aafa89196801ef4fe680137e0.jpg">
+                </li>
+                <li>
+                    <img src="https://s1.1zoom.me/big0/160/354276-admin.jpg">
+                </li>
+                <li>
+                    <img src="https://mobimg.b-cdn.net/pic/v2/gallery/preview/goroda-pejzazh-ulicy-22228.jpg">
+                </li>
+                <li>
+                    <img src="http://2.bp.blogspot.com/-dNtt1v-HAOE/UFdRpT_pY9I/AAAAAAAABXw/gBzxja1td3Y/s1600/fondos-escritorio-ciudades-1280.jpg">
+                </li>
+            </ul>
+        </div>
+        <div style="text-align: center;">
+            <table>
+                <thead>
+                    <h2>Informacion sobre el curso</h2>
+                </thead>
+                <tbody>
+                    <p>Rubi es...</p>
+                    <p>Un lengiaje de programacion dinamico y de codigo abierto enfocado en la simplicidad y productividad. su elegante sintaxis se siente natural al leerla y es facil de escribirla</p>
+                </tbody>
+            </table>
         </div>
         <br>
         <br>
