--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,54 +1,68 @@
-/**********SLIDER********************/
-
-.container-slider {
-    width: 90%;
-    max-width: 900px;
-    margin: auto;
-    overflow: hidden;
-    box-shadow: 0 0 0 10px #fff, 0 15px 50px;
-    position: relative;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .slider {
+    width: 200%;
+    max-width: 500px;
+    margin: auto;
+    overflow: hidden;
+    /* box-shadow: 0 0 0 10px #fff, 0 15px 50px; */
+    position: relative;
+    top: -40px;
+}
+
+.slider ul {
     display: flex;
+    animation: cambio 20s infinite alternate linear;
     width: 400%;
-    height: 400px;
 }
 
-.slider__section {
-    width: 100%;
+.slider li {
+    width: 50%;
+    list-style: none;
 }
 
-.slider__img {
+.slider img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 450px;
+    height: 300px;
     object-fit: cover;
 }
 
-.slider__btn {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background: rgb(255, 255, 255, 0.7);
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 30px;
-    font-weight: bold;
-    font-family: monospace;
-    text-align: center;
-    border-radius: 50%;
-    cursor: pointer;
+@keyframes cambio {
+    0% {
+        margin-left: 0;
+    }
+    20% {
+        margin-left: 0;
+    }
+    25% {
+        margin-left: -100%;
+    }
+    45% {
+        margin-left: -100%;
+    }
+    50% {
+        margin-left: -200%;
+    }
+    70% {
+        margin-left: -200%;
+    }
+    75% {
+        margin-left: -300%;
+    }
+    100% {
+        margin-left: -300%;
+    }
 }
 
-.slider__btn:hover {
-    background: white;
-}
-
-.slider__btn--left {
-    left: 10px;
-}
-
-.slider__btn--right {
-    right: 10px;
+@media only screen and (min-width:320px) and (max-width:768px) {
+    .slider,
+    .slider ul,
+    .slider img {
+        height: 100vh;
+    }
 }
