--- a/views/infoempresa.ejs
+++ b/views/infoempresa.ejs
@@ -6,10 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quienes somos?</title>
+    <link rel="stylesheet" href="/css/lightbox.min.css">
+    <link rel="stylesheet" href="/css/lol.css">
 </head>
 
 <body>
     <h1>¿Quienes somos?</h1>
+<div class="gallery-container">
+    <div class="gallery-card">
+        <a href="img/img-1.jpg" data-lightbox="roadtrip"><img src="img/img-1.jpg" alt="Imagen"></a>
+    </div>
+    <div class="gallery-card">
+        <a href="img/img-2.jpg" data-lightbox="roadtrip"><img src="img/img-2.jpg" alt="Imagen"></a>
+    </div>
+    <div class="gallery-card">
+        <a href="img/img-3.jpg" data-lightbox="roadtrip"><img src="img/img-3.jpg" alt="Imagen"></a>
+    </div>
+    <div class="gallery-card">
+        <a href="img/img-4.jpg" data-lightbox="roadtrip"><img src="img/img-4.jpg" alt="Imagen"></a>
+    </div>
+    <div class="gallery-card">
+        <a href="img/img-5.jpg" data-lightbox="roadtrip"><img src="img/img-5.jpg" alt="Imagen"></a>
+    </div>
+    <div class="gallery-card">
+        <a href="img/img-6.jpg" data-lightbox="roadtrip"><img src="img/img-6.jpg" alt="Imagen"></a>
+    </div>
+  
+</div>
+
+
+
+
+
+
+
+<script src="/js/lightbox-plus-jquery.min.js"></script>
+<script src="/js/lightbox.min.js"></script>
+
 </body>
 
 </html>
