--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -39,7 +39,7 @@
                     </ul>
                 </li>
                 <li class="menu__item"><a href="" class="menu__link">Ejemplos</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Sobre nosotros</a></li>
+                <li class="menu__item"><a href="/infoempresa" class="menu__link">Sobre nosotros</a></li>
             </ul>
         </nav>
         <div class="container-slider">
