--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -63,7 +63,7 @@
                 </li>
             </ul>
         </div>
-        <div style="text-align: center;">
+        <div class="text-center">
             <table>
                 <thead>
                     <h2>Informacion sobre el curso</h2>
@@ -71,6 +71,12 @@
                 <tbody>
                     <p>Rubi es...</p>
                     <p>Un lengiaje de programacion dinamico y de codigo abierto enfocado en la simplicidad y productividad. su elegante sintaxis se siente natural al leerla y es facil de escribirla</p>
+                    <p>Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos, creado por el programador japonés Yukihiro "Matz" Matsumoto, quien comenzó a trabajar en Ruby en 1993, y lo presentó públicamente en 1995. Combina una
+                        sintaxis inspirada en Python y Perl con características de programación orientada a objetos similares a Smalltalk. Comparte también funcionalidad con otros lenguajes de programación como Lisp, Lua, Dylan y CLU. Ruby es un lenguaje
+                        de programación interpretado en una sola pasada y su implementación oficial es distribuida bajo una licencia de software libre.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet ducimus officiis consectetur facilis corporis dolor aliquid. Quo beatae consequuntur accusantium aspernatur corporis ad deserunt corrupti alias sed illum! Velit, voluptatum.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt praesentium consequatur facere esse, ipsum natus harum. Placeat quos ipsum deleniti! Expedita cupiditate nemo atque in totam quod aspernatur inventore sed.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolor recusandae aspernatur nam minus. Alias quibusdam, enim asperiores optio corporis error iste ipsum magnam, voluptas, corrupti recusandae debitis laudantium nostrum.</p>
                 </tbody>
             </table>
         </div>
