Corrección de errores causados por Luis.

--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/aja/libs/font-awesome/5.15.2/css/all.min.css">
+   
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/slider.css">
     <title>
@@ -46,6 +46,8 @@
             </div>
 
         </nav>
+<div class="container-fluid-sm">
+
 
         <div class="slider">
             <ul>
@@ -63,30 +65,13 @@
                 </li>
             </ul>
         </div>
-        <div class="text-center">
-            <table>
-                <thead>
-                    <h2>Informacion sobre el curso</h2>
-                </thead>
-                <tbody>
-                    <p>Rubi es...</p>
-                    <p>Un lengiaje de programacion dinamico y de codigo abierto enfocado en la simplicidad y productividad. su elegante sintaxis se siente natural al leerla y es facil de escribirla</p>
-                    <p>Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos, creado por el programador japonés Yukihiro "Matz" Matsumoto, quien comenzó a trabajar en Ruby en 1993, y lo presentó públicamente en 1995. Combina una
-                        sintaxis inspirada en Python y Perl con características de programación orientada a objetos similares a Smalltalk. Comparte también funcionalidad con otros lenguajes de programación como Lisp, Lua, Dylan y CLU. Ruby es un lenguaje
-                        de programación interpretado en una sola pasada y su implementación oficial es distribuida bajo una licencia de software libre.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet ducimus officiis consectetur facilis corporis dolor aliquid. Quo beatae consequuntur accusantium aspernatur corporis ad deserunt corrupti alias sed illum! Velit, voluptatum.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt praesentium consequatur facere esse, ipsum natus harum. Placeat quos ipsum deleniti! Expedita cupiditate nemo atque in totam quod aspernatur inventore sed.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolor recusandae aspernatur nam minus. Alias quibusdam, enim asperiores optio corporis error iste ipsum magnam, voluptas, corrupti recusandae debitis laudantium nostrum.</p>
-                </tbody>
-            </table>
-        </div>
-        <br>
-        <br>
+    </div>
+    
         <footer>
             <%- include ('partials/footer')%>
         </footer>
         <script src="/js/menu.js"></script>
-        <script src="/js/slider.js"></script>
+        
 </body>
 
 </html>
