--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <link rel="stylesheet" href="/css/menu.css">
-    <link rel="stylesheet" href="/css/slider.css">
+   
     <title>
         MoreRuby
     </title>
@@ -17,35 +16,7 @@
 
 <body>
     <%- include ('partials/navigation2')%>
-        <span class="nav-bar" id="btnMenu"><i class="fas fa-bars"></i>Menu</span>
-        <nav class="main-nav">
-            <ul class="menu" id="menu">
-                <li class="menu__item"><a href="" class="menu__link">Introduccion</a></li>
-                <li class="menu__item container-submenu">
-                    <a href="#" class="menu__link submenu-btn">Temas<i class="fas fa-chevron-down"></i></a>
-                    <ul class="submenu">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Unidad I</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Unidad II</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Unidad III</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Unidad IV</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="menu__item"><a href="" class="menu__link">Ejemplos</a></li>
-                <li class="menu__item"><a href="/infoempresa" class="menu__link">Sobre nosotros</a></li>
-            </ul>
-            <div style="text-align: center;">
-                <h2>Aprendiendo Ruby</h2>
-            </div>
-
-        </nav>
+    <%- include ('partials/navigation3')%>
 <div class="container-fluid-sm">
 
 
