CAmbio de fondos y estilos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,8 @@
 .btn-bd-primary {
     font-weight: 600;
     color: #fff;
-    background-color: #7952b3;
-    border-color: #7952b3
+    background-color: #000000;
+    border-color: #ffffff;
 }
 
 .btn-bd-primary:hover,
