--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Bebas Neue', cursive;
     font-family: 'Kanit', sans-serif;
-    background: linear-gradient(to right, #9796f0, #faabbf, #f8afc2, #9796f0);
+    /* background: linear-gradient(to right, #9796f0, #faabbf, #f8afc2, #9796f0); */
+    background: gray;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display: grid;
     min-height: 100vh;
