--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -16,30 +16,31 @@
 <body>
     <%- include ('partials/navigation2')%>
         <%- include ('partials/navigation3')%>
-            <div class="container-fluid-sm">
 
-
-                <div class="slider">
-                    <ul>
-                        <li>
-                            <img src="https://i.pinimg.com/originals/74/52/db/7452db2aafa89196801ef4fe680137e0.jpg">
-                        </li>
-                        <li>
-                            <img src="https://s1.1zoom.me/big0/160/354276-admin.jpg">
-                        </li>
-                        <li>
-                            <img src="https://mobimg.b-cdn.net/pic/v2/gallery/preview/goroda-pejzazh-ulicy-22228.jpg">
-                        </li>
-                        <li>
-                            <img src="http://2.bp.blogspot.com/-dNtt1v-HAOE/UFdRpT_pY9I/AAAAAAAABXw/gBzxja1td3Y/s1600/fondos-escritorio-ciudades-1280.jpg">
-                        </li>
-                    </ul>
-                </div>
-            </div>
             <div class="contaiter-fluid">
                 <section class="dark">
                     <div class="container py-4">
-                        <h1 class="h1 text-center" id="pageHeaderTitle">My Cards Dark</h1>
+                        <h1 class="h1 text-center text-light" id="pageHeaderTitle">Aprendiendo Ruby</h1>
+                        <div class="container-fluid-sm">
+
+
+                            <div class="slider">
+                                <ul>
+                                    <li>
+                                        <img src="https://i.pinimg.com/originals/74/52/db/7452db2aafa89196801ef4fe680137e0.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="https://s1.1zoom.me/big0/160/354276-admin.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="https://mobimg.b-cdn.net/pic/v2/gallery/preview/goroda-pejzazh-ulicy-22228.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="http://2.bp.blogspot.com/-dNtt1v-HAOE/UFdRpT_pY9I/AAAAAAAABXw/gBzxja1td3Y/s1600/fondos-escritorio-ciudades-1280.jpg">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <article class="postcard dark blue">
                             <a class="postcard__img_link" href="#">
