--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -44,94 +44,96 @@
 
                         <article class="postcard dark blue">
                             <a class="postcard__img_link" href="#">
-                                <img class="postcard__img" src="https://picsum.photos/1000/1000" alt="Image Title" />
+                                <img class="postcard__img" src="https://cdn.thenewstack.io/media/2020/08/32b6ae37-cdee1264-creative-commons-photo-by-mathias-meyer-via-wikipedia-1241px-yukihiro_matsumoto_euruko_2011.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
-                                <h1 class="postcard__title blue"><a href="#">Podcast Title</a></h1>
+                                <h1 class="postcard__title blue"><a href="#">Creador</a></h1>
                                 <div class="postcard__subtitle small">
-                                    <time datetime="2020-05-25 12:00:00">
-                                    <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
-                                </time>
+                                    <!-- <time datetime="2021-12-01 12:00:00">
+                                    <i class="fas fa-calendar-alt mr-2"></i>Mon, Dec 01st 2021
+                                </time> -->
                                 </div>
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis
-                                    molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</div>
-                                <ul class="postcard__tagbox">
+                                <div class="postcard__preview-txt">El lenguaje fue creado por Yukihiro "Matz" Matsumoto, quien empezó a trabajar en Ruby el 24 de febrero de 1993, y lo presentó al público en el año 1995. En el círculo de amigos de Matsumoto se le puso el nombre de Ruby
+                                    &#40;en español rubí&#41; como broma aludiendo al lenguaje de programación Perl &#40;perla en inglés&#41;. El creador del lenguaje ha dicho que Ruby está diseñado para la productividad y la diversión del desarrollador,
+                                    siguiendo los principios de una buena interfaz de usuario. Sostiene que el diseño de sistemas necesita enfatizar las necesidades humanas más que las de la máquina.</div>
+                                <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
                                     <li class="tag__item play blue">
                                         <a href="#"><i class="fas fa-play mr-2"></i>Play Episode</a>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </article>
                         <article class="postcard dark red">
                             <a class="postcard__img_link" href="#">
-                                <img class="postcard__img" src="https://picsum.photos/501/500" alt="Image Title" />
+                                <img class="postcard__img" src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
-                                <h1 class="postcard__title red"><a href="#">Podcast Title</a></h1>
-                                <div class="postcard__subtitle small">
+                                <h1 class="postcard__title red"><a href="#">Ruby</a></h1>
+                                <!-- <div class="postcard__subtitle small">
                                     <time datetime="2020-05-25 12:00:00">
                                     <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
                                 </time>
-                                </div>
+                                </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis
-                                    molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</div>
-                                <ul class="postcard__tagbox">
+                                <div class="postcard__preview-txt">Ruby es un lenguaje de programacion orientado a objetos, es de proposito general, por lo que se puede desarrollar todo tipo de aplicaciones diferentes; es un lenguaje interpretado, es decir, se necesita que el intérprete
+                                    de Ruby evalué el código y lo traduzca en lenguaje de máquina entendible por un ordenador, pero no existe un proceso previo de compilación como en C o Java. </div>
+                                <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
                                     <li class="tag__item play red">
                                         <a href="#"><i class="fas fa-play mr-2"></i>Play Episode</a>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </article>
                         <article class="postcard dark green">
                             <a class="postcard__img_link" href="#">
-                                <img class="postcard__img" src="https://picsum.photos/500/501" alt="Image Title" />
+                                <img class="postcard__img" src="https://aldibs.com/wp-content/uploads/2020/01/ruby-on-rails-development.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
-                                <h1 class="postcard__title green"><a href="#">Podcast Title</a></h1>
-                                <div class="postcard__subtitle small">
+                                <h1 class="postcard__title green"><a href="#">Rails</a></h1>
+                                <!-- <div class="postcard__subtitle small">
                                     <time datetime="2020-05-25 12:00:00">
                                     <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
                                 </time>
-                                </div>
+                                </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis
-                                    molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</div>
-                                <ul class="postcard__tagbox">
+                                <div class="postcard__preview-txt">Uno de los elementos que hace que Ruby sea tan popular es Ruby On Rails, un Framework que está muy de moda para realizar aplicaciones Web modernas. Rails está escrito en Ruby, por lo tanto se necesita del mismo para hacer
+                                    aplicaciones Web.</div>
+                                <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
                                     <li class="tag__item play green">
                                         <a href="#"><i class="fas fa-play mr-2"></i>Play Episode</a>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </article>
                         <article class="postcard dark yellow">
-                            <a class="postcard__img_link" href="#">
-                                <img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+                            <a class="postcard__img_link" href="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg">
+                                <img class="postcard__img" src="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
-                                <h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
-                                <div class="postcard__subtitle small">
+                                <h1 class="postcard__title yellow"><a href="#">Gemas</a></h1>
+                                <!-- <div class="postcard__subtitle small">
                                     <time datetime="2020-05-25 12:00:00">
                                     <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
                                 </time>
-                                </div>
+                                </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis
-                                    molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</div>
-                                <ul class="postcard__tagbox">
+                                <div class="postcard__preview-txt">Una gema en Ruby es un conjunto de código empaquetado. Se pueden utilizar las gemas por ejemplo para añadir a nuestro programa funcionalidad que ya ha implementado otro desarrollador para así reutilizar código y ahorrarnos
+                                    trabajos.
+                                </div>
+                                <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
                                     <li class="tag__item play yellow">
                                         <a href="#"><i class="fas fa-play mr-2"></i>Play Episode</a>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </article>
                     </div>
