--- a/views/partials/navigation3.ejs
+++ b/views/partials/navigation3.ejs
@@ -1,5 +1,7 @@
-<span class="nav-bar" id="btnMenu"><i class="fas fa-bars"></i>Menu</span>
-<nav class="main-nav">
+
+
+<span class="nav-bar " id="btnMenu"><i class="fas fa-bars"></i>Menu</span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <ul class="menu" id="menu">
         <li class="menu__item"><a href="/configuracion" class="menu__link">Instalación</a></li>
         <li class="menu__item container-submenu">
