--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -43,7 +43,7 @@ body {
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  color: rgb(54, 54, 54);
 }
 
 .sidebar .nav-link .feather {
@@ -52,7 +52,7 @@ body {
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+  color: rgb(54, 54, 54);
 }
 
 .sidebar .nav-link:hover .feather,
