--- a/views/partials/navigation2.ejs
+++ b/views/partials/navigation2.ejs
@@ -9,7 +9,7 @@
         <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/"> <i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link active" aria-current="page" href="unidades"> <i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
                     <h4>
