--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -70,7 +70,7 @@
                             <a class="postcard__img_link" href="#">
                                 <img class="postcard__img" src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg" alt="Image Title" />
                             </a>
-                            <div class="postcard__text">
+                            <div class="postcard__text text-center">
                                 <h1 class="postcard__title red"><a href="#">Ruby</a></h1>
                                 <!-- <div class="postcard__subtitle small">
                                     <time datetime="2020-05-25 12:00:00">
