--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -29,7 +29,7 @@
     display: block;
     width: 450px;
     height: 300px;
-    object-fit: cover;
+    object-fit:fill;
 }
 
 @keyframes cambio {
