--- a/views/infoempresa.ejs
+++ b/views/infoempresa.ejs
@@ -19,57 +19,38 @@
     <%- include ('partials/navigation3')%>
 
 </header>
-   
-<div class="mar">
-
-    <div class="container-fluid text-center ">
-        <img src="/img/fondo.png" class="img-fluid animate__bounceIn" >
-            
-    </div>
-<!--
-    <div class="container " >
-        <header class="row">
-            <div class="col-lg-12 text-center" >
-                <img src="/img/ruby.png" class="img-fluid animate__bounceIn" width="100px" style="margin: 20px;">
-            
-
-            </div>
-
-        </header>
-
-    </div>
-
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-                <p class="fs-1">Ruby</p>
-            </div>
-            <div class="col-sm-3">
-                <img src="/img/homer.gif" class="img-fluid " width="250px" style="margin: 20px;  border-radius: 1000px;">
-             </div>
-             <div class="col-sm-3 text-justify">
-                <p class="font-weight-light">Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos, creado por el programador japonés Yukihiro "Matz" Matsumoto, quien comenzó a trabajar en Ruby en 1993, y lo presentó públicamente en 1995.</p>
-             </div>
-
+<article class="container-fluid  postcard dark blue">
+    <a class="postcard__img_link" href="#">
+        <img class=" img-fluid postcard__img"
+            src="https://cdn.thenewstack.io/media/2020/08/32b6ae37-cdee1264-creative-commons-photo-by-mathias-meyer-via-wikipedia-1241px-yukihiro_matsumoto_euruko_2011.jpg"
+            alt="Image Title" />
+    </a>
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Creador</a></h1>
+        <div class="postcard__subtitle small">
+            <!-- <time datetime="2021-12-01 12:00:00">
+            <i class="fas fa-calendar-alt mr-2"></i>Mon, Dec 01st 2021
+        </time> -->
         </div>
-
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt">El lenguaje fue creado por Yukihiro "Matz" Matsumoto,
+            quien empezó a trabajar en Ruby el 24 de febrero de 1993, y lo presentó al público
+            en el año 1995. En el círculo de amigos de Matsumoto se le puso el nombre de Ruby
+            &#40;en español rubí&#41; como broma aludiendo al lenguaje de programación Perl
+            &#40;perla en inglés&#41;. El creador del lenguaje ha dicho que Ruby está diseñado
+            para la productividad y la diversión del desarrollador,
+            siguiendo los principios de una buena interfaz de usuario. Sostiene que el diseño de
+            sistemas necesita enfatizar las necesidades humanas más que las de la máquina.</div>
+        <!-- <ul class="postcard__tagbox">
+            <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
+            <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
+            <li class="tag__item play blue">
+                <a href="#"><i class="fas fa-play mr-2"></i>Play Episode</a>
+            </li>
+        </ul> -->
     </div>
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-             
-            </div>
-            <div class="col-sm-3">
-               
-             </div>
-             <div class="col-sm-3">
-              
-             </div>
+</article>
 
-        </div>
-
-    </div>-->    
-</div>
 <footer>
     <%- include ('partials/footer')%>
 </footer>
