--- a/views/configuracion.ejs
+++ b/views/configuracion.ejs
@@ -112,6 +112,21 @@
                     </div>
                 </article>
             </div>
+            <div class="mar">
+                <article class="postcard dark red">
+                    <a class="postcard__img_link" href="#">
+                        <!-- <img class="postcard__img" src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg" alt="Image Title" /> -->
+                    </a>
+                    <div class="postcard__text">
+                        <!-- <h1 class="postcard__title red"><a href="#">Ruby</a></h1> -->
+                        <div class="postcard__bar"></div>
+                        <div class="postcard__preview-txt">
+                            <p>Otros sistemas operativos</p>
+                            <p>Si quieres usar usar otro tipo de sistema operativo puede visitar la pagina oficial y leer mas al respecto sobre las formas y metodos de instalacion. <a href="https://www.ruby-lang.org/es/documentation/installation/">Click aqui.</a></p>
+                        </div>
+                    </div>
+                </article>
+            </div>
             <footer>
                 <%- include ('partials/footer')%>
             </footer>
